--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
-    "ethers": "^6.7.1",
-    "framer-motion": "^10.16.4",
-    "howler": "^2.2.3",
-    "lucide-react": "^0.294.0",
+    "ethers": "^6.9.0",
+    "framer-motion": "^11.18.2",
+    "howler": "^2.2.4",
+    "lucide-react": "^0.330.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.17",
+    "web3": "^4.4.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@types/howler": "^2.2.7",
-    "@types/node": "^20.17.30",
+    "@types/howler": "^2.2.11",
+    "@types/node": "^22.14.1",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.53.0",
+    "dotenv": "^16.5.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "hardhat": "^2.19.1",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "hardhat": "^2.19.4",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2",
-    "vite": "^4.5.13"
+    "vite": "^5.0.8"
   }
 }
